--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "main": "expo-router/entry",
   "version": "1.0.0",
+  "engines": { "node": ">=20.19.4" },
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
