Set Node 20.19.4 for EAS production build

--- a/eas.json
+++ b/eas.json
@@ -19,7 +19,8 @@
     "production": {
       "android": {
         "buildType": "apk"
-      }
+      },
+      "node": "20.19.4"
     }
   },
   "submit": {
