Upgrade react-native to 0.81.5 for Gradle build

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "frontend",
   "main": "expo-router/entry",
   "version": "1.0.0",
-  "engines": { "node": ">=20.19.4" },
+  "engines": {
+    "node": ">=20.19.4"
+  },
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
@@ -42,7 +44,7 @@
     "expo-web-browser": "~14.2.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.5",
+    "react-native": "0.81.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-linear-gradient": "^2.8.3",
