--- a/app.json
+++ b/app.json
@@ -43,12 +43,12 @@
       "bundler": "metro"
     },
     "extra": {
-      "EXPO_PUBLIC_BACKEND_URL": "https://forex-mentor-9.preview.emergentagent.com",
+      "EXPO_PUBLIC_BACKEND_URL": "https://mi-mobile-backend-1.onrender.com",
       "eas": {
         "projectId": "cad81038-6e38-48e6-8fa9-ceb277ce265d"
       },
       "router": {},
-      "backendUrl": "https://forex-mentor-9.preview.emergentagent.com"
+      "backendUrl": "https://mi-mobile-backend-1.onrender.com"
     },
     "plugins": [
       "expo-router",
