--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-EXPO_TUNNEL_SUBDOMAIN=mi-dashboard
-EXPO_PACKAGER_HOSTNAME=https://mi-dashboard.preview.emergentagent.com
+EXPO_TUNNEL_SUBDOMAIN=mi-trade-dashboard
+EXPO_PACKAGER_HOSTNAME=https://mi-trade-dashboard.preview.emergentagent.com
 EXPO_PACKAGER_PROXY_URL=https://mi-indicator-live.preview.emergentagent.com
-EXPO_PUBLIC_BACKEND_URL=https://mi-dashboard.preview.emergentagent.com
+EXPO_PUBLIC_BACKEND_URL=https://mi-trade-dashboard.preview.emergentagent.com
 EXPO_USE_FAST_RESOLVER="1"
 METRO_CACHE_ROOT=/app/frontend/.metro-cache
+EXPO_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_live_QDLoCyh7AoTRKWWBPLI0AkzL00GUgDLwVF
